--- a/concourse_ci/tasks/maven-test.yml
+++ b/concourse_ci/tasks/maven-test.yml
@@ -4,8 +4,8 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: maven
-    tag: 3.6.0-jdk-8-alpine
+    repository: busybox
+    tag: latest
 
 run:
   path: "sh"
