--- a/concourse_ci/pipeline.yml
+++ b/concourse_ci/pipeline.yml
@@ -49,7 +49,7 @@ jobs:
             path: "mvn"
             args:
               - -f
-              - devops-lagom-service/pom.xml
+              - spring-boot-service/pom.xml
               - clean
               - compile
               - test
@@ -74,7 +74,7 @@ jobs:
             path: "mvn"
             args:
               - -f
-              - devops-lagom-service/pom.xml
+              - spring-boot-service/pom.xml
               - clean
               - package
       - put: spring-boot-service-docker-repository
