--- a/concourse_ci/pipeline.yml
+++ b/concourse_ci/pipeline.yml
@@ -1,9 +1,9 @@
-resource_types:
-  - name: kubectl-resource
-    type: docker-image
-    source: 
-      repository: jmkarthik/concourse-kubectl-resource
-      tag: latest
+# resource_types:
+#   - name: kubectl-resource
+#     type: docker-image
+#     source: 
+#       repository: jmkarthik/concourse-kubectl-resource
+#       tag: latest
 
 resources:
   - name: spring-boot-service
@@ -12,21 +12,21 @@ resources:
       uri: https://github.com/azmathasan92/concourse-ci-cd.git
       branch: master
 
-  - name: spring-boot-service-docker-repository
-    type: docker-image
-    source:
-      email: ((docker-hub-email))
-      username: ((docker-hub-username))
-      password: ((docker-hub-password))
-      repository: ((docker-hub-username))/((docker-hub-repo-name))
+  # - name: spring-boot-service-docker-repository
+  #   type: docker-image
+  #   source:
+  #     email: ((docker-hub-email))
+  #     username: ((docker-hub-username))
+  #     password: ((docker-hub-password))
+  #     repository: ((docker-hub-username))/((docker-hub-repo-name))
 
-  - name: kubectl
-    type: kubectl-resource
-    source:
-      api_server_uri: ((server))
-      namespace: ((namespace))
-      certificate_authority_data: ((cad))
-      token: ((token))
+  # - name: kubectl
+  #   type: kubectl-resource
+  #   source:
+  #     api_server_uri: ((server))
+  #     namespace: ((namespace))
+  #     certificate_authority_data: ((cad))
+  #     token: ((token))
 
 jobs:
   - name: test
@@ -52,40 +52,40 @@ jobs:
               - compile
               - test
 
-  - name: package
-    public: true
-    serial: true
-    plan:
-      - get: spring-boot-service
-        trigger: true
-        passed: [test]
-      - task: mvn-package
-        config:
-          platform: linux
-          image_resource:
-            type: docker-image
-            source:
-              repository: maven
-              tag: 3.6.0-jdk-8-alpine
-          run:
-            path: "mvn"
-            args:
-              - -f
-              - spring-boot-service/pom.xml
-              - clean
-              - package
-      - put: spring-boot-service-docker-repository
-        params:
-          build: spring-boot-service/
+  # - name: package
+  #   public: true
+  #   serial: true
+  #   plan:
+  #     - get: spring-boot-service
+  #       trigger: true
+  #       passed: [test]
+  #     - task: mvn-package
+  #       config:
+  #         platform: linux
+  #         image_resource:
+  #           type: docker-image
+  #           source:
+  #             repository: maven
+  #             tag: 3.6.0-jdk-8-alpine
+  #         run:
+  #           path: "mvn"
+  #           args:
+  #             - -f
+  #             - spring-boot-service/pom.xml
+  #             - clean
+  #             - package
+  #     - put: spring-boot-service-docker-repository
+  #       params:
+  #         build: spring-boot-service/
 
-  - name: deploy
-    public: true
-    serial: true
-    plan:
-      - get: spring-boot-service
-        trigger: false
-        passed: [package]
+  # - name: deploy
+  #   public: true
+  #   serial: true
+  #   plan:
+  #     - get: spring-boot-service
+  #       trigger: false
+  #       passed: [package]
 
-      - put: kubectl
-        params:
-          file: "spring-boot-service/spring-boot-deploy.yaml"
+  #     - put: kubectl
+  #       params:
+  #         file: "spring-boot-service/spring-boot-deploy.yaml"
