--- a/concourse_ci/tasks/maven-test.yml
+++ b/concourse_ci/tasks/maven-test.yml
@@ -4,19 +4,16 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: busybox
-    tag: latest
+    repository: maven
+    tag: 3.6.0-jdk-8-alpine
+
+inputs:
+  - name: spring-boot-service
 
 run:
-  path: "sh"
+  path: "mvn"
   args:
-    - ls
-
-# run:
-#   path: "mvn"
-#   args:
-#     - -f
-#     - spring-boot-service/pom.xml
-#     - clean
-#     - compile
-#     - test
+    - -f
+    - spring-boot-service/pom.xml
+    - clean
+    - test
