--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,7 @@ stages:
   - job: Package
     displayName: Package
     pool:
-      vmImage: ubuntu-default
+      vmImage: ubuntu-18.04
     steps:
     - task: Maven@3
       inputs:
@@ -33,7 +33,7 @@ stages:
   - job: Build
     displayName: Build
     pool:
-      vmImage: ubuntu-default
+      vmImage: ubuntu-18.04
     steps:
     - task: Docker@2
       displayName: Build an image
